cholera 0.5.1.9055
==================

- add pearlString2() beta.
- test traveling salesman solution for addNeighborhoodEuclidean() and neighborhoodEuclidean().


cholera 0.5.1.9054
==================

- add col argument to caseLocator().


cholera 0.5.1.9053
==================

- add addDelauny() and plot(neighborhoodVoronoi(), delauny.triangles = FALSE).


cholera 0.5.1.9052
==================

- add caseLocator(add = TRUE).


cholera 0.5.1.9051
==================

- fix euclideanPath(type = "cases") output.


cholera 0.5.1.9050
==================

- add landmarksSquares() and landmarks.squares.
- add landmarks to euclideanPath().


cholera 0.5.1.9049
==================

- consolidate addWalkingPath().


cholera 0.5.1.9048
==================

- fix zero-length arrows in plot.walking_path() and addWalkingPath().


cholera 0.5.1.9047
==================

- re-tweak zoom for Golden and Soho Squares in plot.walking_path().


cholera 0.5.1.9046
==================

- add landmarks to type = "cases" in walkingDistance() and walkingPath().
- add citySquare().


cholera 0.5.1.9045
==================

- add landmarks to type = "case-pump" in walkingDistance() and walkingPath().
- tweak zoom for Golden and Soho Squares in plot.walking_path().


cholera 0.5.1.9044
==================

- add new landmarks and orthoProjLandmarks() prototypes.


cholera 0.5.1.9043
==================

- fix title in euclideanPath(type = "case-pump").
- fix destination label for walkingPath(destination = NULL).


cholera 0.5.1.9042
==================

- add new euclideanDistance(), euclideanPath() and walkingPath() prototypes.


cholera 0.5.1.9041
==================

- amend "<" to "<=" in walkingPath().


cholera 0.5.1.9040
==================

- test amended landmarks and orthoProjLandmarks().
- fix walkingPath() landmark destinations.


cholera 0.5.1.9039
==================

- add new walkingDistance() and walkingPath() prototypes.


cholera 0.5.1.9038
==================
